# cibuildwheel_fetchcontent_permission_error_example

./: CMakeLists.txt  main.f90  pyproject.toml
